--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -28,44 +28,25 @@ alerting:
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
 
-  - job_name: app
+  - job_name: app-testing
     scrape_interval: 5s
     static_configs:
-      - targets: ['host.docker.internal:8000']
+      - targets: ['server17a:8000']
 
   - job_name: 'prometheus'
-
-    # Override the global default and scrape targets from this job every 5 seconds.
     scrape_interval: 5s
-
     static_configs:
-         - targets: ['localhost:9090']
+         - targets: ['server17a:9090']
 
-
-  - job_name: 'cadvisor'
-
-    # Override the global default and scrape targets from this job every 5 seconds.
+  - job_name: grafana.cadvisor
     scrape_interval: 5s
+    static_configs:
+      - targets: ['grafana.cadvisor:8080']
 
-    dns_sd_configs:
-    - names:
-      - 'tasks.cadvisor'
-      type: 'A'
-      port: 8080
-
-#     static_configs:
-#          - targets: ['cadvisor:8080']
-
-  - job_name: 'node-exporter'
-
-    # Override the global default and scrape targets from this job every 5 seconds.
+  - job_name: grafana.node-exporter
     scrape_interval: 5s
-
-    dns_sd_configs:
-    - names:
-      - 'tasks.node-exporter'
-      type: 'A'
-      port: 9100
+    static_configs:
+      - targets: ['grafana.node-exporter:9100']
 
 #  - job_name: 'pushgateway'
 #    scrape_interval: 10s
@@ -74,6 +55,5 @@ scrape_configs:
 #      - 'tasks.pushgateway'
 #      type: 'A'
 #      port: 9091
-
 #     static_configs:
 #          - targets: ['node-exporter:9100']
