--- a/.github/workflows/intergrate.yml
+++ b/.github/workflows/intergrate.yml
@@ -56,6 +56,7 @@ jobs:
             [linux:vars]
             ansible_user = ${{ secrets.USERNAME }}
             ansible_sudo_pass = ${{ secrets.PASSWORD }}
+            ansible_ssh_pass=${{ secrets.PASSWORD }}
             
             # [azure:vars]
             # ansible_user=gregory
