added install of ufw and opening of right ports

--- a/deployments/deployment.yml
+++ b/deployments/deployment.yml
@@ -3,6 +3,14 @@
   become: true
   tasks:
 
+  ###############
+  # install ufw #
+  ###############
+  - name: Install ufw firewall
+    ansible.builtin.apt:
+      name: ufw
+      state: present
+
   #########################################
   # Creating a temp directory on the host #
   #########################################
@@ -139,3 +147,35 @@
     file:
       state: absent
       path: /temp/
+
+  ##################
+  # open port 9200 #
+  ##################
+  - name: Allow all access to port 9200
+    ufw:
+      rule: allow
+      port: '9200'
+
+  ##################
+  # open port 9090 #
+  ##################
+  - name: Allow all access to port 9090
+    ufw:
+      rule: allow
+      port: '9090'
+
+  ##################
+  # open port 9100 #
+  ##################
+  - name: Allow all access to port 9100
+    ufw:
+      rule: allow
+      port: '9100'
+
+  ##################
+  # open port 8080 #
+  ##################
+  - name: Allow all access to port 8080
+    ufw:
+      rule: allow
+      port: '8080'
