--- a/deployments/deployment.yml
+++ b/deployments/deployment.yml
@@ -66,6 +66,15 @@
       state: directory
       mode: '0777'
 
+  #################################################
+  # Creating the prometheus directory on the host #
+  #################################################
+  - name: Create the prometheus directory if it does not exist
+    ansible.builtin.file:
+      path: /home/gregory/srv/grafana-prometheus/prometheus/datasources/
+      state: directory
+      mode: '0777'
+
   ###################################
   # Copy the prometheus config file #
   ###################################
