changed graylog version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
         - monitoring-stack
         
   graylog:
-      image: graylog/graylog:<version>
+      image: graylog/graylog:4.3
       #journal and config directories in local NFS share for persistence
       volumes:
          - /video/graylog/journal:/usr/share/graylog/data/journal
