changed folder and deployment file

--- a/deployments/deployment.yml
+++ b/deployments/deployment.yml
@@ -16,7 +16,7 @@
   #########################################
   - name: Create a temp directory if it does not exist
     ansible.builtin.file:
-      path: /temp/grafana-promteheus/
+      path: /temp/
       state: directory
       mode: '0777'
 
