--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
         - Password: admin
         - GRAYLOG_ROOT_PASSWORD_SHA2=8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
         - GRAYLOG_HTTP_BIND_ADDRESS=0.0.0.0:7555
-        - GRAYLOG_HTTP_EXTERNAL_URI=http://192.168.10.152:7555/
+        - GRAYLOG_HTTP_EXTERNAL_URI=https://graylog.cloud-migrations.nl
         - GRAYLOG_TRANSPORT_EMAIL_WEB_INTERFACE_URL=http://192.168.2.3:7555
         - GRAYLOG_TRANSPORT_EMAIL_HOSTNAME=smtp.example.com
         - GRAYLOG_TRANSPORT_EMAIL_ENABLED=true
