--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       environment:
         # CHANGE ME (must be at least 16 characters)!
         - GRAYLOG_PASSWORD_SECRET=forpasswordencryption
-        - Password: admin
+        - Password: "admin"
         - GRAYLOG_ROOT_PASSWORD_SHA2=8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
         - GRAYLOG_HTTP_BIND_ADDRESS=0.0.0.0:7555
         - GRAYLOG_HTTP_EXTERNAL_URI=https://graylog.cloud-migrations.nl
