--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -42,6 +42,15 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
          - targets: ['192.168.2.3:9090']
+
+  ##############
+  # Prometheus #
+  ##############
+  # Collects metrics about Prometheus
+  - job_name: 'oppervlakpro3'
+    scrape_interval: 5s
+    static_configs:
+         - targets: ['192.168.2.3:49664']
  
   ############
   # Cadvisor #
