--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -43,9 +43,9 @@ scrape_configs:
     static_configs:
          - targets: ['192.168.2.3:9090']
 
-  ##############
-  # Prometheus #
-  ##############
+  #################
+  # node_explorer #
+  #################
   # Collects metrics about Prometheus
   - job_name: 'oppervlakpro3'
     scrape_interval: 5s
