--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -32,7 +32,7 @@ scrape_configs:
   - job_name: traefik
     scrape_interval: 5s
     static_configs:
-      - targets: ['192.168.2.3:8082']
+      - targets: ['traefik.rproxy:8082']
 
   ##############
   # Prometheus #
@@ -41,7 +41,7 @@ scrape_configs:
   - job_name: 'prometheus'
     scrape_interval: 5s
     static_configs:
-         - targets: ['192.168.2.3:9090']
+         - targets: ['grafana-prometheus:9090']
 
   ##################
   #  Node-Exporter #
