--- a/grafana/provisioning/datasources/prometheus_ds.yml
+++ b/grafana/provisioning/datasources/prometheus_ds.yml
@@ -4,11 +4,14 @@ datasources:
   type: prometheus
   url: http://prometheus:9090
   isDefault: true
-
-- name: GitHub Repo Insights
-  type: grafana-github-datasource
-  jsonData:
-      owner: "gregoryca"
-      repository: "Nextcloud"
-  secureJsonData:
-      accessToken: "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"
+  
+promop:
+    grafana:
+        additionalDataSources:
+        - name: GitHub Repo Insights
+          type: grafana-github-datasource
+          jsonData:
+              owner: "gregoryca"
+              repository: "Nextcloud"
+          secureJsonData:
+              accessToken: "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"
