--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ grafana-data/plugins/grafana-github-datasource/img/github.svg
 grafana-data/plugins/grafana-github-datasource/LICENSE
 grafana-data/plugins/grafana-github-datasource/MANIFEST.txt
 grafana-data/plugins/grafana-github-datasource/module.js
+grafana-data/plugins/grafana-github-datasource/README.md
