--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -61,6 +61,15 @@ scrape_configs:
     static_configs:
       - targets: ['grafana.cadvisor:8080']
 
+  ############
+  # Cadvisor #
+  ############
+  # Collects info based on Cadvisor for containers
+  - job_name: Windows
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['192.168.2.108:9182']
+
 #  - job_name: 'pushgateway'
 #    scrape_interval: 10s
 #    dns_sd_configs:
