revised docker compose file to change container ports

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ grafana-data/plugins/grafana-github-datasource/LICENSE
 grafana-data/plugins/grafana-github-datasource/MANIFEST.txt
 grafana-data/plugins/grafana-github-datasource/module.js
 grafana-data/plugins/grafana-github-datasource/README.md
+.env
