--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -59,16 +59,16 @@ scrape_configs:
   - job_name: server17a.cadvisor
     scrape_interval: 5s
     static_configs:
-      - targets: ['grafana.cadvisor:8080']
+      - targets: ['192.168.2.100:8080']
 
   ###########
   # Windows #
   ###########
   # Collects info based on Cadvisor for containers
-  - job_name: Windows
-    scrape_interval: 5s
-    static_configs:
-      - targets: ['192.168.2.108:9182']
+  # - job_name: Windows
+  #   scrape_interval: 5s
+  #   static_configs:
+  #     - targets: ['192.168.2.108:9182']
 
 #  - job_name: 'pushgateway'
 #    scrape_interval: 10s
