--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,62 +2,77 @@ version: "3"
 # More info at https://github.com/pi-hole/docker-pi-hole/ and https://docs.pi-hole.net/
 services:
   grafana:
-      image: grafana/grafana:latest
-      container_name: grafana
-      restart: unless-stopped
-      volumes:
-        - ./provisioning/datasources:/etc/grafana/provisioning/datasources:rw
-        - ./grafana-data:/var/lib/grafana:rw
-      networks: 
-        - web-secure
-        - monitoring-stack
-      labels:
-        - "traefik.enable=true"
+    image: grafana/grafana:latest
+    container_name: grafana
+    hostname: grafana
+    restart: unless-stopped
+    volumes:
+      - ./provisioning/datasources:/etc/grafana/provisioning/datasources:rw
+      - ./grafana-data:/var/lib/grafana:rw
+    networks: 
+      - web-secure
+      - monitoring-stack
+    labels:
+      - "traefik.enable=true"
 
-       # web interface
-        - "traefik.http.routers.grafana-secure.rule=Host(`grafana.apex-migrations.net`)"
-        - "traefik.http.routers.grafana-secure.tls.certresolver=production"
-        - "traefik.http.routers.grafana-secure.tls=true"
-        - "traefik.http.routers.grafana-secure.entrypoints=web-secure"
-        - "traefik.http.services.grafana-secure.loadbalancer.server.port=3000" #port to the webservice
+      # web interface
+      - "traefik.http.routers.grafana-secure.rule=Host(`grafana.apex-migrations.net`)"
+      - "traefik.http.routers.grafana-secure.tls.certresolver=production"
+      - "traefik.http.routers.grafana-secure.tls=true"
+      - "traefik.http.routers.grafana-secure.entrypoints=web-secure"
+      - "traefik.http.services.grafana-secure.loadbalancer.server.port=3000" #port to the webservice
 
   loki:
-    image: grafana/loki:2.7.3
+    image: grafana/loki:latest
+    container_name: grafana.loki
+    hostname: grafana.loki
     ports:
       - "3100:3100"
+    volumes:
+      - ./var/log:/var/log
+      - /traefik/logs/
     command: -config.file=/etc/loki/local-config.yaml
     networks: 
       - monitoring-stack
-    links:
-      - cadvisor:cadvisor
-      - alertmanager:alertmanager
-      - grafana:grafana
-      
-  elasticsearch:
-      image: docker.elastic.co/elasticsearch/elasticsearch:8.4.1
-      container_name: grafana.elasticsearch
-      restart: unless-stopped
-      ports:
-        - 9200:9200
-      environment:
-        - discovery.type=single-node
-        - xpack.security.enabled=false
-        - xpack.security.enrollment.enabled=true
-        - ES_JAVA_OPTS=-Xmx3000m
-      volumes:
-        - ./elasticsearch-data:/usr/share/elasticsearch/data
-      networks: 
-        - web-secure
-        - monitoring-stack
-      labels:
-        - "traefik.enable=true"
 
-        # web interface
-        - "traefik.http.routers.elasticsearch-secure.rule=Host(`elasticsearch.apex-migrations.net`)"
-        - "traefik.http.routers.elasticsearch-secure.tls.certresolver=production"
-        - "traefik.http.routers.elasticsearch-secure.tls=true"
-        - "traefik.http.routers.elasticsearch-secure.entrypoints=web-secure"
-        - "traefik.http.services.elasticsearch-secure.loadbalancer.server.port=9200" #port to the webservice
+  promtail:
+    image: grafana/promtail:latest
+    container_name: grafana.promtail
+    hostname: grafana.promtail
+    volumes:
+      - ./var/log:/var/log
+      - /traefik/logs/
+      - ./config/:/etc/promtail/
+    command: -config.file=/etc/promtail/config.yml
+    networks: 
+      - monitoring-stack
+        
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.4.1
+    container_name: grafana.elasticsearch
+    hostname: grafana.elasticsearch
+    restart: unless-stopped
+    ports:
+      - 9200:9200
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - xpack.security.enrollment.enabled=true
+      - ES_JAVA_OPTS=-Xmx3000m
+    volumes:
+      - ./elasticsearch-data:/usr/share/elasticsearch/data
+    networks: 
+      - web-secure
+      - monitoring-stack
+    labels:
+      - "traefik.enable=true"
+
+      # web interface
+      - "traefik.http.routers.elasticsearch-secure.rule=Host(`elasticsearch.apex-migrations.net`)"
+      - "traefik.http.routers.elasticsearch-secure.tls.certresolver=production"
+      - "traefik.http.routers.elasticsearch-secure.tls=true"
+      - "traefik.http.routers.elasticsearch-secure.entrypoints=web-secure"
+      - "traefik.http.services.elasticsearch-secure.loadbalancer.server.port=9200" #port to the webservice
 
   # kibana:
   #   image: kibana:8.4.1
@@ -91,6 +106,7 @@ services:
   prometheus:
     image: prom/prometheus
     container_name: grafana.prometheus
+    hostname: grafana.prometheus
     restart: always
     volumes:
       - ./prometheus:/etc/prometheus/
@@ -99,19 +115,14 @@ services:
       - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/usr/share/prometheus/console_libraries'
       - '--web.console.templates=/usr/share/prometheus/consoles'
-    ports:
-      - 9090:9090
     networks: 
       - monitoring-stack
-    links:
-      - cadvisor:cadvisor
-      - alertmanager:alertmanager
-    depends_on:
-      - cadvisor
+      - web-secure
 
   node-exporter:
     container_name: grafana.node-exporter
     image: prom/node-exporter
+    hostname: grafana.node-exporter
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -132,6 +143,7 @@ services:
   alertmanager:
     container_name: grafana.alertmanager
     image: prom/alertmanager
+    hostname: grafana.alertmanager
     restart: always
     ports:
       - 9093:9093
@@ -146,13 +158,12 @@ services:
   cadvisor:
     container_name: grafana.cadvisor
     image: gcr.io/cadvisor/cadvisor
+    hostname: grafana.cadvisor
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
-    ports:
-      - 8282:8282
     restart: always
     deploy:
       mode: global
