--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -38,9 +38,8 @@ scrape_configs:
   # Collects Traefik Metrics configured in the static traefik configuration
   - job_name: 'traefik metrics'
     scrape_interval: 5s
-    metrics_path: '/metrics'
     static_configs:
-      - targets: ['traefik.rproxy:8080']
+      - targets: ['192.168.2.100:8080']
 
   ##################
   #  Node-Exporter #
