--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -39,7 +39,7 @@ scrape_configs:
   - job_name: 'traefik metrics'
     scrape_interval: 5s
     static_configs:
-      - targets: ['192.168.2.100:8080']
+      - targets: ['traefik.rproxy:8080']
 
   ##################
   #  Node-Exporter #
