--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -37,9 +37,10 @@ scrape_configs:
   ###########
   # Collects Traefik Metrics configured in the static traefik configuration
   - job_name: 'traefik metrics'
+    metrics_path: '/metrics'
     scrape_interval: 5s
     static_configs:
-      - targets: ['traefik.rproxy:8080']
+      - targets: ['traefik.rproxy:8082']
 
   ##################
   #  Node-Exporter #
