made changes to the config/infra of grafana

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,27 @@ grafana-data/plugins/grafana-github-datasource/module.js
 grafana-data/plugins/grafana-github-datasource/README.md
 .env
 config/config.yml
+grafana-data/plugins/grafana-piechart-panel/dark.js
+grafana-data/plugins/grafana-piechart-panel/dark.js.map
+grafana-data/plugins/grafana-piechart-panel/editor.html
+grafana-data/plugins/grafana-piechart-panel/LICENSE
+grafana-data/plugins/grafana-piechart-panel/light.js
+grafana-data/plugins/grafana-piechart-panel/light.js.map
+grafana-data/plugins/grafana-piechart-panel/MANIFEST.txt
+grafana-data/plugins/grafana-piechart-panel/module.html
+grafana-data/plugins/grafana-piechart-panel/module.js
+grafana-data/plugins/grafana-piechart-panel/module.js.LICENSE.txt
+grafana-data/plugins/grafana-piechart-panel/module.js.map
+grafana-data/plugins/grafana-piechart-panel/plugin.json
+grafana-data/plugins/grafana-piechart-panel/README.md
+grafana-data/plugins/grafana-piechart-panel/img/piechart_logo_large.png
+grafana-data/plugins/grafana-piechart-panel/img/piechart_logo_large.svg
+grafana-data/plugins/grafana-piechart-panel/img/piechart_logo_small.png
+grafana-data/plugins/grafana-piechart-panel/img/piechart_logo_small.svg
+grafana-data/plugins/grafana-piechart-panel/img/piechart-donut.png
+grafana-data/plugins/grafana-piechart-panel/img/piechart-legend-on-graph.png
+grafana-data/plugins/grafana-piechart-panel/img/piechart-legend-rhs.png
+grafana-data/plugins/grafana-piechart-panel/img/piechart-legend-under.png
+grafana-data/plugins/grafana-piechart-panel/img/piechart-options.png
+grafana-data/plugins/grafana-piechart-panel/styles/dark.css
+grafana-data/plugins/grafana-piechart-panel/styles/light.css
