--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     hostname: grafana
     restart: unless-stopped
     volumes:
-      - ./grafana-data:/var/lib/grafana:rw
+      - grafana-data:/var/lib/grafana:rw
     networks: 
       - web-secure
       - monitoring-stack
@@ -174,3 +174,6 @@ networks:
     external: true
   monitoring-stack:
     external: true
+
+volumes:
+  grafana-data:
